--- a/ios/stellar_app/Info.plist
+++ b/ios/stellar_app/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>NSCameraUsageDescription</key>
+  <string>stellar would like to use the camera</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>stellar would like to access your photos</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>stellar needs to use the microphone for video recording</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
