--- a/ios/stellar_app/Info.plist
+++ b/ios/stellar_app/Info.plist
@@ -2,12 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>NSCameraUsageDescription</key>
-  <string>stellar would like to use the camera</string>
-  <key>NSPhotoLibraryUsageDescription</key>
-  <string>stellar would like to access your photos</string>
-  <key>NSMicrophoneUsageDescription</key>
-  <string>stellar needs to use the microphone for video recording</string>
+	<key>NSCameraUsageDescription</key>
+	<string>stellar would like to use the camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>stellar would like to access your photos</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>stellar needs to use the microphone for video recording</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -42,7 +42,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -55,5 +55,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
+	</array>
 </dict>
 </plist>
