--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.45.1",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-fs": "^2.3.3",
+    "react-native-vector-icons": "^4.2.0",
     "react-redux": "^5.0.5",
     "react-router-native": "^4.1.1",
     "redux": "^3.6.0"
