--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-fs": "^2.3.3",
     "react-native-uploader": "^0.0.10",
     "react-native-vector-icons": "^4.2.0",
+    "react-native-video": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-router-native": "^4.1.1",
     "redux": "^3.6.0"
