--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.45.1",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-fs": "^2.3.3",
+    "react-native-timeago": "^0.3.0",
     "react-native-uploader": "^0.0.10",
     "react-native-vector-icons": "^4.2.0",
     "react-native-video": "^1.0.0",
