--- a/ios/stellar_app/Info.plist
+++ b/ios/stellar_app/Info.plist
@@ -47,7 +47,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>stellar would like to use the camera</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>stellar needs to use the microphone for video recording</string>
 	<key>NSPhotoLibraryUsageDescription</key>
